238 desarrollo de la UI del post del cu alquilar herramienta (#241)
* Modifico el navMenupara para que me salga como me pide el CU

* Creo el archivo y lo modfifico

* Modifico estos archivos para que sea posible que el cliente pueda meter correo electronico y numTelefono ya que no estaba implementado

* Actualizo swagger y el container

* Modifico esto para que funcione correctamente la UI del post
